[package]
name = "common-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serde = "1"
dashmap = "5.4.0"
serde_json = "1"
derive-from-one = "0.1.0"
bytes = { version = "1.5.0", features = ["serde"] }
