[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
async-compat = "0.2.1"
eyre = { version = "0.6.8" }
minimal-executor = "0.4.1"
bevy_reflect = "0.9.0"
tracing = "0.1.37"
color-eyre = "0.5"
thiserror = "1.0.37"
clap = { version = "4.0.26", features = ["derive", "env"] }
serde = { version = "1.0.147", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing-appender = "0.2.2"
tracing-futures = "0.2.5"
async-trait = "0.1.58"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
cfg-if = "1.0.0"
quote = "1.0.21"
proc-macro2 = "1.0.47"
syn = { version = "1.0.103", features = ["full"] }
itertools = "0.10.5"
tap = "1.0.1"
convert_case = "0.6.0"
bytes = "1.2.1"
strum = "0.24.1"
strum_macros = "0.24.3"
atomic_refcell = "0.1.8"
chrono = "0.4.23"
static_assertions = "1.1.0"
kanal = "0.1.0-pre7"
lazy_static = "1.4.0"
dashmap = "5.4.0"
bstr = "1.0.1"
derivative = "2.2.0"
http = "0.2.8"
downcast = "0.11.0"