[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { version = "0.6.8" }
tracing = "0.1.37"
color-eyre = "0.5"
thiserror = "1.0.37"
clap = { version = "4.0.26", features = ["derive", "env"] }
serde = { version = "1.0.147", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing-appender = "0.2.2"
serde_json = "1.0.87"
quote = "1.0.21"
proc-macro2 = "1.0.47"
itertools = "0.10.5"
convert_case = "0.6.0"
lazy_static = "1.4.0"
derivative = "2.2.0"
downcast-rs = "1.2.0"