[package]
name = "javascript-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-lang = { path = "../common-lang" }
common = { path = "../common" }
#oxc = { version = "0.3" , features = ["codegen"] }
oxc = { path = "../oxc/crates/oxc" , features = ["codegen"] }