[package]
name = "javascript-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-lang = { path = "../common-lang" }
common = { path = "../common" }
swc_ecma_ast = "0.110"
swc_ecma_quote = "0.57"
swc_ecma_codegen = "0.146"
swc_ecma_parser = "0.141"
