[package]
name = "lang-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true }
serde = { version = "1", features = ["derive"] }
dashmap = "5.4.0"
serde_json = "1"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
bytes = { version = "1.5.0", features = ["serde"] }
itertools = "0.12.1"
eyre = "0.6.12"
thiserror = "1"
miette = { version = "7.2.0", features = ["fancy"] }