[package]
name = "lang-mips"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
lang-core = { path = "../lang-core" }
serde = { version = "1", features = ["derive"] }
dashmap = "5.4.0"
serde_json = "1"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
bytes = { version = "1.5.0", features = ["serde"] }
itertools = "0.12.1"
lang-optimize = { path = "../lang-optimize" }
eyre = "0.6.12"
strum = "0.26.1"
strum_macros = "0.26.1"

[dev-dependencies]
rust-lang = { path = "../rust-lang" }
proc-macro2 = "1"
syn = "2"
quote = "1"