[package]
name = "rust-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-lang = { path = "../common-lang" }
common = { path = "../common" }
syn-serde = { version = "0.2", features = ["json"] }
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
