[package]
name = "rust-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
rust-lang = { path = "../rust-lang" }
common = { path = "../common" }
common-lang = { path = "../common-lang" }
