[package]
name = "rust-preload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
common-lang = { path = "../common-lang" }
rust-lang = { path = "../rust-lang" }
syn-serde = { version = "0.2", features = ["json"] }
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
clap = { version = "4.1.8", features = ["derive"] }
serde = "1"
tempdir = "0.3.7"
