[package]
name = "rust-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.85"
eyre = "0.6.8"
regex = "1.6.0"
clap = { version = "4", features = ["derive"] }
syn-serde = { version = "0.2", features = ["json"] }
syn = { version = "1", features = ["full"] }
quote = "1.0.21"